Lesson 2 - 2nd page : (Select League - toggle button)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,9 +85,10 @@
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
         android:layout_marginBottom="24dp"
-        android:background="@drawable/get_started_button"
+        android:background="@drawable/button_unchecked"
         android:fontFamily="@font/montserrat"
         android:text="GET STARTED"
+        android:textColor="#FFFFFF"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
