--- a/app/src/main/res/layout/activity_league.xml
+++ b/app/src/main/res/layout/activity_league.xml
@@ -17,7 +17,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/desiredleaguebg" />
+        app:srcCompat="@drawable/desiredleaguebg"
+        android:contentDescription="@string/desired_league_bg" />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -29,15 +30,16 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView3"
-        app:srcCompat="@drawable/swooshlogo" />
+        app:srcCompat="@drawable/swooshlogo"
+        android:contentDescription="@string/swoosh_logo" />
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="160dp"
-        android:layout_height="39dp"
+        android:layout_width="178dp"
+        android:layout_height="44dp"
         android:layout_marginTop="56dp"
         android:fontFamily="@font/montserrat"
-        android:text="Desired League"
+        android:text="@string/desired_league"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,12 +52,13 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="256dp">
+        app:layout_constraintTop_toBottomOf="@+id/textView4">
 
         <ToggleButton
             android:id="@+id/toggleButton"
@@ -63,11 +66,11 @@
             android:layout_height="wrap_content"
             android:background="@drawable/button_toggle"
             android:fontFamily="@font/montserrat"
-            android:text="Mens"
+            android:text="@string/mens"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textOff="Mens"
-            android:textOn="Mens"
+            android:textOff="@string/mens"
+            android:textOn="@string/mens"
             android:textSize="16sp" />
 
         <ToggleButton
@@ -77,11 +80,11 @@
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
             android:background="@drawable/button_toggle"
-            android:text="Womens"
+            android:text="@string/womens"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textOff="Womens"
-            android:textOn="Womens"
+            android:textOff="@string/womens"
+            android:textOn="@string/womens"
             android:textSize="16sp" />
 
         <ToggleButton
@@ -89,11 +92,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/button_toggle"
-            android:text="Co-ed"
+            android:text="@string/co_ed"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textOff="Co-ed"
-            android:textOn="Co-ed"
+            android:textOff="@string/co_ed"
+            android:textOn="@string/co_ed"
             android:textSize="16sp" />
     </LinearLayout>
 
@@ -108,7 +111,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/button_unchecked"
         android:fontFamily="@font/montserrat"
-        android:text="NEXT"
+        android:text="@string/next"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
