--- a/app/src/main/res/layout/activity_skill.xml
+++ b/app/src/main/res/layout/activity_skill.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LeagueActivity">
+    tools:context=".SkillActivity">
 
     <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:id="@+id/imageView4"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -17,105 +17,100 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/desiredleaguebg"
-        android:contentDescription="@string/desired_league_bg" />
+        app:srcCompat="@drawable/beginnerballerbg"
+        android:contentDescription="@string/bg_1" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="126dp"
         android:layout_height="43dp"
         android:layout_marginTop="28dp"
+        android:contentDescription="@string/swoosh_logo"
         android:scaleType="fitCenter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView3"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/swooshlogo"
-        android:contentDescription="@string/swoosh_logo" />
+        tools:ignore="ImageContrastCheck" />
 
     <TextView
-        android:id="@+id/textView4"
-        android:layout_width="178dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="56dp"
-        android:fontFamily="@font/montserrat"
-        android:text="@string/desired_league"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
-
-    <LinearLayout
+        android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:orientation="vertical"
+        android:layout_marginTop="44dp"
+        android:fontFamily="@font/montserrat"
+        android:text="@string/i_am_a"
+        android:textColor="@color/white"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4">
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        tools:ignore="TextContrastCheck" />
+
+    <LinearLayout
+        android:id="@+id/beginnerBallerLInear"
+        android:layout_width="399dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="104dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5">
 
         <ToggleButton
-            android:id="@+id/toggleButton"
-            android:layout_width="329dp"
+            android:id="@+id/toggleButton2"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginRight="12dp"
+            android:layout_weight="1"
             android:background="@drawable/button_toggle"
-            android:fontFamily="@font/montserrat"
-            android:text="@string/mens"
+            android:text="@string/beginner"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textOff="@string/mens"
-            android:textOn="@string/mens"
+            android:textOff="@string/beginner"
+            android:textOn="@string/beginner"
             android:textSize="16sp" />
 
         <ToggleButton
-            android:id="@+id/toggleButton4"
-            android:layout_width="match_parent"
+            android:id="@+id/toggleButton3"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_weight="1"
             android:background="@drawable/button_toggle"
-            android:text="@string/womens"
+            android:text="@string/baller"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textOff="@string/womens"
-            android:textOn="@string/womens"
-            android:textSize="16sp" />
-
-        <ToggleButton
-            android:id="@+id/toggleButton5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/button_toggle"
-            android:text="@string/co_ed"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textOff="@string/co_ed"
-            android:textOn="@string/co_ed"
+            android:textOff="@string/baller"
+            android:textOn="@string/baller"
             android:textSize="16sp" />
     </LinearLayout>
 
     <Button
-        android:id="@+id/desiredLeagueNxtBtn"
-        android:layout_width="366dp"
-        android:layout_height="60dp"
+        android:id="@+id/finishBtn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/button_unchecked"
-        android:fontFamily="@font/montserrat"
-        android:onClick="leagueNxtClicked"
-        android:text="@string/next"
+        android:text="@string/finish"
         android:textColor="@color/white"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
