--- a/app/src/main/res/layout/activity_league.xml
+++ b/app/src/main/res/layout/activity_league.xml
@@ -61,7 +61,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView4">
 
         <ToggleButton
-            android:id="@+id/toggleButton"
+            android:id="@+id/mensBtn"
             android:layout_width="329dp"
             android:layout_height="wrap_content"
             android:background="@drawable/button_toggle"
@@ -74,7 +74,7 @@
             android:textSize="16sp" />
 
         <ToggleButton
-            android:id="@+id/toggleButton4"
+            android:id="@+id/womensBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -88,7 +88,7 @@
             android:textSize="16sp" />
 
         <ToggleButton
-            android:id="@+id/toggleButton5"
+            android:id="@+id/coedBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/button_toggle"
@@ -111,7 +111,6 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/button_unchecked"
         android:fontFamily="@font/montserrat"
-        android:onClick="leagueNxtClicked"
         android:text="@string/next"
         android:textColor="@color/white"
         android:textSize="16sp"
