--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".controller.MainActivity">
 
     <ImageView
         android:id="@+id/imageView"
@@ -25,17 +25,17 @@
         android:layout_width="126dp"
         android:layout_height="43dp"
         android:layout_marginTop="28dp"
+        android:contentDescription="@string/swoosh_logo"
         android:scaleType="fitCenter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:srcCompat="@drawable/swooshlogo"
-        android:contentDescription="@string/swoosh_logo" />
+        app:srcCompat="@drawable/swooshlogo" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="278dp"
+        android:layout_width="wrap_content"
         android:layout_height="67dp"
         android:layout_marginTop="80dp"
         android:fontFamily="@font/montserrat"
@@ -43,13 +43,13 @@
         android:textColor="#FFFFFF"
         android:textSize="55sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.52"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="295dp"
+        android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:fontFamily="@font/montserrat"
         android:text="@string/on_going_all_out"
@@ -62,9 +62,13 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="284dp"
+        android:layout_width="0dp"
         android:layout_height="51dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginLeft="60dp"
         android:layout_marginTop="60dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginRight="60dp"
         android:fontFamily="@font/montserrat"
         android:gravity="center_horizontal"
         android:singleLine="false"
@@ -80,7 +84,7 @@
 
     <Button
         android:id="@+id/getStartedBtn"
-        android:layout_width="366dp"
+        android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
